--- a/contact.html
+++ b/contact.html
@@ -222,6 +222,7 @@
                       class="form-control"
                       id="name"
                       placeholder="Your Name"
+                      required
                     />
                     <label for="name">Your Name</label>
                   </div>
@@ -233,6 +234,7 @@
                       class="form-control"
                       id="email"
                       placeholder="Your Email"
+                      required
                     />
                     <label for="email">Your Email</label>
                   </div>
@@ -244,6 +246,7 @@
                       class="form-control"
                       id="subject"
                       placeholder="Subject"
+                      required
                     />
                     <label for="subject">Subject</label>
                   </div>
@@ -255,6 +258,7 @@
                       placeholder="Leave a message here"
                       id="message"
                       style="height: 150px"
+                      required
                     ></textarea>
                     <label for="message">Message</label>
                   </div>
