--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
               <a class="btn btn-outline-light btn-social"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a class="btn btn-outline-light btn-social"
-                ><i class="fab fa-youtube"></i
+              <a class="btn btn-outline-light btn-social" href="https//kelasketerampilan.my.id"
+                ><i class="fab fa-google"></i
               ></a>
               <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/kelas.keterampilan/" target="_blank"
                 ><i class="fab fa-instagram"></i
