--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         class="navbar-brand d-flex align-items-center px-4 px-lg-5"
       >
         <h2 class="m-0 text-primary">
-          <i class="fa fa-book me-3"></i>KTR MAJESA 45
+          <i class="fa fa-book me-3"></i>KETERAMPILAN
         </h2>
       </a>
       <button
